--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -9,6 +9,6 @@ RUN bundle install
 ADD . $APP_HOME
 ENV POST_SERVICE_HOST post
 ENV POST_SERVICE_PORT 5000
-ENV COMMENT_SERVICE_HOST comment
+ENV COMMENT_SERVICE_HOST comment-ui
 ENV COMMENT_SERVICE_PORT 9292
 CMD ["puma"]
