--- a/reddit-app/example.env
+++ b/reddit-app/example.env
@@ -1,6 +1,6 @@
 #this is the example .env file
 USERNAME=ksevasilyeva
-UI_PORT=9292
+EXTERNAL_PORT=9292
 MONGO_VERSION=3.2
 UI_VERSION=1.0
 POST_VERSION=1.0
