--- a/reddit-app/docker-compose.yml
+++ b/reddit-app/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: ./ui
     image: ${USERNAME}/ui:${UI_VERSION}
     ports:
-      - ${EXTERNAL_PORT}:9292/tcp
+      - ${UI_EXTERNAL_PORT}:9292/tcp
     networks:
       - front_net
   post:
