--- a/reddit-app/docker-compose.yml
+++ b/reddit-app/docker-compose.yml
@@ -10,21 +10,25 @@ services:
           - post_mongo
           - comment_mongo
   ui:
-    build: ./ui
     image: ${USERNAME}/ui:${UI_VERSION}
     ports:
       - ${UI_EXTERNAL_PORT}:9292/tcp
     networks:
       - front_net
   post:
-    build: ./post-py
     image: ${USERNAME}/post:${POST_VERSION}
     networks:
       - back_net
       - front_net
   comment:
-    build: ./comment
     image: ${USERNAME}/comment:${COMMENT_VERSION}
+    networks:
+      - back_net
+      - front_net
+  prometheus:
+    image: ${USERNAME}/prometheus
+    ports:
+      - '9090:9090'
     networks:
       - back_net
       - front_net
