--- a/reddit-app/example.env
+++ b/reddit-app/example.env
@@ -1,5 +1,5 @@
 #this is the example .env file
-USERNAME=ksevasilyeva
+USER_NAME=ksevasilyeva
 UI_EXTERNAL_PORT=9292
 MONGO_VERSION=3.2
 UI_VERSION=1.0
